- `gui/gm-unit`: correctly display skill levels above Legendary+5
- `quickfort`: fix merge logic for disjoint stockpiles that are given the same label
- `makeown`: set target animals to tame and domesticated
- `gui/sandbox`: created citizens can now be useful military squad members
- `gui/sandbox`: created undead now have a purple shade (after save and reload)

## Misc Improvements
- `gui/launcher`: "space space to toggle pause" behavior is skipped if the game was paused when `gui/launcher` came up to prevent accidental unpausing
- `gui/unit-info-viewer`: now displays a unit's weight, relative to either dwarves, elephants or cats
- `gui/unit-info-viewer`: shows a unit's relative size to its race's average.
- `caravan`: optional overlay to hide vanilla bring trade goods to depot button (if you prefer to always use the DFHack version and don't want to accidentally click on the vanilla button). enable ``caravan.movegoods_hider`` in `gui/control-panel` UI Overlays tab to use.
- `caravan`: bring goods to depot screen now shows (approximate) distance from item to depot
- `gui/design`: significant redesign of UI for much improved usability
- `gui/design`: circles are more circular
- `gui/unit-info-viewer`: add precise unit size in cc (cubic centimeters) for comparison against the wiki values. you can set your preferred number format for large numbers like this in the preferences of `control-panel` or `gui/control-panel`
- `gui/quickfort`: delete blueprints from the blueprint load dialog
- `quickfort`: new ``delete`` command for deleting player-owned blueprints (library and mod-added blueprints cannot be deleted)
- `gui/launcher`: refresh default tag filter when mortal mode is toggled in `gui/control-panel` so changes to which tools autocomplete take effect immediately
- `gui/civ-alert`: you can now register multiple burrows as civilian alert safe spaces
- `lever`: enable use of ``reqscript`` to access lever pulling functions.